[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Comandos" type="ColorRect" parent="."]
margin_left = 153.0
margin_top = 105.0
margin_right = 634.0
margin_bottom = 381.0
color = Color( 0.364706, 0.34902, 0.654902, 1 )

[node name="Button" type="Button" parent="."]
margin_left = 153.0
margin_top = 106.0
margin_right = 316.0
margin_bottom = 157.0
text = "Coleta"

[node name="LineEdit" type="LineEdit" parent="Button"]
margin_top = -50.0
margin_right = 170.0
margin_bottom = -26.0
rect_pivot_offset = Vector2( 55, 12 )
text = "Numero"

[node name="LineEdit2" type="LineEdit" parent="Button"]
margin_top = -24.0
margin_right = 169.0
text = "Nome"

[node name="Button2" type="Button" parent="."]
margin_left = 316.0
margin_top = 106.0
margin_right = 475.0
margin_bottom = 157.0
text = "Print"

[node name="Label" type="Label" parent="."]
margin_left = 253.0
margin_top = 160.0
margin_right = 406.0
margin_bottom = 360.0

[node name="Button3" type="Button" parent="."]
margin_left = 474.0
margin_top = 106.0
margin_right = 634.0
margin_bottom = 157.0
text = "Baldo"

[node name="Label2" type="Label" parent="."]
margin_left = 478.0
margin_top = 161.0
margin_right = 631.0
margin_bottom = 361.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
